--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,14 +40,13 @@
         android:id="@+id/num2"
         android:layout_width="369dp"
         android:layout_height="42dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Wert 2"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -177,7 +176,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:background="#3F51B5"
-        android:text="0"
+        android:text="default"
         android:textAlignment="textEnd"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/calc"
